Validate part size (GSI-2353) (#175)
* Validate part size

* Fix wording on http exception message

* Add part size constraints to rest model and add API test
